spec/error/Parse.agda
-- /Users/banacorn/github/agda-mode/spec/error/Parse.agda:8,1-1
-- /Users/banacorn/github/agda-mode/spec/error/Parse.agda:8,1: Parse error
-- <EOF><ERROR>
-- ...
module Parse where

dat A : Set where
